--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 		</div>
 	</header>
 	<div class="hero home">
-		<div><img class="blue box">
-			<h1 class="heroheading">Surviving your first year as a Rutgers Engineering Student!</h1>
-		</div>
+		<div><img class="slide1 box"></div>
 
 		<div><img class="purple box">
 			<h1 class="heroheading">Order your Engineering apparel today!</h1>
@@ -54,8 +52,8 @@
 			<h2>Upcoming Events</h2>
 				<ul class="events" style="width: 360px">
 					<li>
-						<h3 class"event-title">EGC General Meeting</h3>
-						<p class"event-description">November 24th at 8:10 PM in the Busch Student Center (BSC) Room 116.</p>
+						<h3 class"event-title">Singing with the Staff</h3>
+						<p class"event-description">February 12th at 6:30 PM in The Cove at the Busch Student Center.</p>
 					</li>
 					<li>
 						<h3 class"event-title">EGC Committee Meeting</h3>
