--- a/about.html
+++ b/about.html
@@ -17,30 +17,31 @@
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
 </head>
 <body>
-	<header class="main-header">
-		<a href="./index.html"><div class="nav-logo">
-			<img class="logo" src="http://i.imgur.com/P3DUo8e.png">
-			<img class="rulogo" src="http://i.imgur.com/hNzbZFm.png">
-			<h3 class="title">Engineering Governing Council</h3>
-		</div></a>
-		
-		<!-- NAVBAR -->
-		<div class="navbar">
-			<ul class="navlinks">
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About</a></li>
-				<li><a href="./members.html">Members</a></li>
-				<li><a href="./societies.html">Societies</a></li>
-				<li><a href="./resources.html">Resources</a></li>
-			</ul>
-		</div>
-	</header>
+	<nav role="navigation" class="shadow">
+        <div class="container">
+            <div class="nav-row">
+                <a href="http://egc.rutgers.edu" rel="home">
+                	<img class="logo" src="http://i.imgur.com/K2VdLXR.png">
+            	</a>
+
+               <!-- <button data-dropdown-target="#navigation" class="visible-xxs visible-xs"><span class="visuallyhidden">Navigation</span></button> -->
+
+                <div id="navigation">
+                    <a href="./index.html" >Home</a>
+                    <a href="./about.html" >About</a>
+                    <a href="./members.html" >Members</a>
+                    <a href="./societies.html" >Societies</a>
+                    <a href="./resources.html" >Resources</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 	<div class="hero">
 		<div class="member-container">
 			<div class="members">
 				<h1>About EGC</h1>
-				<img id="egcgroup"src="http://i.imgur.com/fNrzRMO.jpg">
+				<a href="http://i.imgur.com/fNrzRMO.jpg" target="_blank"><img id="egcgroup"src="http://i.imgur.com/fNrzRMO.jpg"></a>
 				<p class="about-text">
 					The Engineering Governing Council (EGC) is the governing body of the Rutgers University School of Engineering on the New Brunswick/Piscataway Campus. Working in conjunction with the faculty and administration of the School of Engineering, the EGC strives to represent and further the needs and best interests of its constituency. Additionally, the EGC works in parallel with University administration and other student Governing Associations to help give students at Rutgers University a stronger voice as a whole.
 					<br><br>
