--- a/index.html
+++ b/index.html
@@ -17,34 +17,31 @@
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
 </head>
 <body>
-	<header class="main-header">
-		<a href="./index.html"><div class="nav-logo">
-			<img class="logo" src="http://i.imgur.com/P3DUo8e.png">
-			<img class="rulogo" src="http://i.imgur.com/hNzbZFm.png">
-			<h3 class="title">Engineering Governing Council</h3>
-		</div></a>
-		
-		<!-- NAVBAR -->
-		<div class="navbar">
-			<ul class="navlinks">
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About</a></li>
-				<li><a href="./members.html">Members</a></li>
-				<li><a href="./societies.html">Societies</a></li>
-				<li><a href="./resources.html">Resources</a></li>
-			</ul>
-		</div>
-	</header>
+	<nav role="navigation" class="shadow">
+        <div class="container">
+            <div class="nav-row">
+                <a href="http://egc.rutgers.edu" rel="home">
+                	<img class="logo" src="http://i.imgur.com/K2VdLXR.png">
+            	</a>
+
+               <!-- <button data-dropdown-target="#navigation" class="visible-xxs visible-xs"><span class="visuallyhidden">Navigation</span></button> -->
+
+                <div id="navigation">
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About</a>
+                    <a href="./members.html">Members</a>
+                    <a href="./societies.html">Societies</a>
+                    <a href="./resources.html">Resources</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 	<div class="hero home">
-		<div><img class="slide1 box"></div>
+		<div><a href="./YearbookOrderForm2015.pdf"><img src="./img/Yearbook Banner.png"></a></div>
 
-		<div><img class="purple box">
-			<h1 class="heroheading">Order your Engineering apparel today!</h1>
-		</div>
+		<div><img src="./img/elections-banner.png"></div>
 
-		<div><img class="orange box">
-			<h1 class="heroheading">Celebrate Thanksgiving at the Gobble Games!</h1>
-		</div>
+		<div><img src="./img/eng-cup-banner.png"></div>
 	</div>
 
 	<div class="left segment">	
@@ -52,12 +49,12 @@
 			<h2>Upcoming Events</h2>
 				<ul class="events" style="width: 360px">
 					<li>
-						<h3 class"event-title">Singing with the Staff</h3>
-						<p class"event-description">February 12th at 6:30 PM in The Cove at the Busch Student Center.</p>
+						<h3 class"event-title">Engineering Open House</h3>
+						<p class"event-description">April 11th from 9:00 AM to 2:00 PM.</p>
 					</li>
 					<li>
-						<h3 class"event-title">EGC Committee Meeting</h3>
-						<p class"event-description">December 1st at 8:10 PM in the Busch Student Center (BSC) Room 116.</p>
+						<h3 class"event-title">Engineering Cup 2015</h3>
+						<p class"event-description">April 17th from 12:30 to 6:00 PM at the Werblin Recreation Center.</p>
 					</li>
 				</ul>
 			<a href="./calendar.html"><button class="cal-button">View Calendar</button></a>
@@ -69,16 +66,20 @@
 			<h2>Latest Updates</h2>
 			<ul class="updates" style="width: 500px">
 				<li>
-					<h3>EGC Apparel is here</h3>
-					<p>To view the available designs and purchase apparel, click here to order!</p>
+					<h3>EGC Elections 2015</h3>
+					<p>Elect your representatives for the Engineering Governing Council! The voting period is from April 13 to 16. Click <a href="http://bitballot.com/login/103">here</a> to vote!</p>
 				</li>
 				<li>
-					<h3>Phi Sigma Rho's 2nd Annual Pumpkin Smash</h3>
-					<p>It's being held in front of the Engineering Building and will be going on from 10a - 5p!</p>
+					<h3>EGC Apparel is almost here</h3>
+					<p>New engineering apparel will be coming soon! Check back for a link to order.</p>
 				</li>
 				<li>
-					<h3>Omega Chi Epsilon Industry Panel</h3>
-					<p>This panel will take place TODAY, Monday, October 27th from 6 to 8:30 PM in the Center Hall/International Lounge of the BCC.</p>
+					<h3></h3>
+					<p></p>
+				</li>
+				<li>
+					<h3></h3>
+					<p></p>
 				</li>
 			</ul>
 			</p>
@@ -97,7 +98,7 @@
 
 			<nav class="footer-nav">
 				<ul>
-					<li><a href="./about.html">About Us</a>  &middot; <a href="./index.html">Home</a>  &middot; <a href="./contact.html">Contact Us</a></li>
+					<li><a href="./about.html">About Us</a>  &middot; <a href="./index.html">Home</a>  &middot; <a href="mailto:egcpublicity@gmail.com">Contact Us</a></li>
 				</ul>
 			</nav>
 
@@ -117,6 +118,7 @@
 				arrows: false,
 				autoplay: true,
 				autoplaySpeed: 3500,
+				dots: true
 			});
 		});
 			
