--- a/members.html
+++ b/members.html
@@ -17,24 +17,25 @@
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
 </head>
 <body>
-	<header class="main-header">
-		<a href="./index.html"><div class="nav-logo">
-			<img class="logo" src="http://i.imgur.com/P3DUo8e.png">
-			<img class="rulogo" src="http://i.imgur.com/hNzbZFm.png">
-			<h3 class="title">Engineering Governing Council</h3>
-		</div></a>
-		
-		<!-- NAVBAR -->
-		<div class="navbar">
-			<ul class="navlinks">
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About</a></li>
-				<li><a href="./members.html">Members</a></li>
-				<li><a href="./societies.html">Societies</a></li>
-				<li><a href="./resources.html">Resources</a></li>
-			</ul>
-		</div>
-	</header>
+	<nav role="navigation" class="shadow">
+        <div class="container">
+            <div class="nav-row">
+                <a href="http://egc.rutgers.edu" rel="home">
+                	<img class="logo" src="http://i.imgur.com/K2VdLXR.png">
+            	</a>
+
+               <!-- <button data-dropdown-target="#navigation" class="visible-xxs visible-xs"><span class="visuallyhidden">Navigation</span></button> -->
+
+                <div id="navigation">
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About</a>
+                    <a href="./members.html">Members</a>
+                    <a href="./societies.html">Societies</a>
+                    <a href="./resources.html">Resources</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 	<div class="hero">
 		<div class="member-container">
@@ -61,10 +62,10 @@
 							<h3 class="member-name">Ankur Choksi</h3>
 							<h3 class="member-title">Interval Vice President</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/ziiBRKU.jpg') no-repeat !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Mechanical and Aerospace Engineering & Economics, 2016</p>
 								</div>
 							</div>
 							<h3 class="member-name">Kaustubh Deshpande</h3>
@@ -92,19 +93,19 @@
 
 					<div class="row">
 						<h2 class="group">Standing Committee Chairs</h2>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/iiKbxZb.jpg?1') no-repeat !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Chemical Engineering, 2016</p>
 								</div>
 							</div>
 							<h3 class="member-name">Charles Foster, Chair</h3>
 							<h3 class="member-title">University Affairs</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/hMgGonU.png') no-repeat !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Electrical and Computer Engineering, 2017</p>
 								</div>
 							</div>
 							<h3 class="member-name">Jasel Patel, Vice-Chair</h3>
@@ -131,23 +132,23 @@
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical and Computer Engineering & Psychology, 2017</p>
+									<p>Chemical and Biochemical Engineering, 2015</p>
 								</div>
 							</div>
-							<h3 class="member-name">Jenn Dang, Chair</h3>
+							<h3 class="member-name">Jennifer Dang, Chair</h3>
 							<h3 class="member-title">Society Affairs</h3>
 						</div>
 						<br>
 						<br>
 						<br>
-						<div class="card">
+						<!--<div class="card">
 							<div class="overlay">
 								<div class="text-content">
 									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
 								</div>
 							</div>
 							<h3 class="member-name">Janki Patel, Co-Chair</h3>
-							<h3 class="member-title">Events</h3>
+							<h3 class="member-title">Events</h3>-->
 						</div>
 						<div class="card" style="background: url('http://i.imgur.com/co3nREZ.png') !important">
 							<div class="overlay">
@@ -158,22 +159,31 @@
 							<h3 class="member-name">Rashi Jha, Co-Chair</h3>
 							<h3 class="member-title">Events</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/seOkSWa.png') !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Chemical Engineering, 2015</p>
 								</div>
 							</div>
 							<h3 class="member-name" style="font-size: 18px;">Cassandra Kotsolakis, Chair</h3>
 							<h3 class="member-title">Internal Review</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Biomedical Engineering, 2016</p>
 								</div>
 							</div>
 							<h3 class="member-name">Bharani Pusukur, Co-Chair</h3>
+							<h3 class="member-title">Publicity</h3>
+						</div>
+						<div class="card">
+							<div class="overlay">
+								<div class="text-content">
+									<p>Electrical and Computer Engineering, 2017</p>
+								</div>
+							</div>
+							<h3 class="member-name">Viral Jogani, Co-Chair</h3>
 							<h3 class="member-title">Publicity</h3>
 						</div>
 					</div>
@@ -189,10 +199,10 @@
 							<h3 class="member-name">Akshay Sardana, Co-Chair</h3>
 							<h3 class="member-title">Fundraising</h3>
 						</div>
-						<div class="card" style="background: url('http://i.imgur.com/RqPEJml.png') !important">
+						<div class="card" style="background: url('http://i.imgur.com/RqPEJml.png') !important; background-size: 100% 100% !important;" >
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical Engineering & Computer Science, 2018</p>
+									<p>Computer Engineering & Computer Science, 2018</p>
 								</div>
 							</div>
 							<h3 class="member-name">Brian Monticello, Co-Chair</h3>
@@ -210,7 +220,7 @@
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical Engineering & Computer Science, 2017</p>
+									<p>Electrical and Computer Engineering, 2017</p>
 								</div>
 							</div>
 							<h3 class="member-name">Viral Jogani, Chair</h3>
@@ -281,10 +291,10 @@
 							<h3 class="member-name">Avi Desai</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/IqNI6Ou.jpg?1') no-repeat !important; background-size: 100% auto !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Chemical Engineering, 2018</p>
 								</div>
 							</div>
 							<h3 class="member-name">Jenna Holland</h3>
@@ -299,19 +309,19 @@
 							<h3 class="member-name">Kevin Penaga</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/030TZD2.jpg') no-repeat !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Bioenvironmental Engineering, 2018</p>
 								</div>
 							</div>
 							<h3 class="member-name">Jane Peterken</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/WvDcZ7i.jpg?1') no-repeat !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Electrical and Computer Engineering, 2018</p>
 								</div>
 							</div>
 							<h3 class="member-name">Katheryne Zak-Strzalka</h3>
@@ -321,10 +331,10 @@
 
 					<div class="row">
 						<h2 class="group">Class of 2017 Representatives</h2>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/luABiIG.jpg') no-repeat !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Mechanical Engineering & Minor in Economics, 2017</p>
 								</div>
 							</div>
 							<h3 class="member-name">Sachin Duggal</h3>
@@ -370,37 +380,37 @@
 
 					<div class="row">
 						<h2 class="group">Class of 2016 Representatives</h2>
-						<div class="card">
+						<div class="card" style="background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Biomedical Engineering, 2016</p>
 								</div>
 							</div>
 							<h3 class="member-name">Bharani Pusukur</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/P2TuCKS.jpg') !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Biomedical Engineering, 2016</p>
 								</div>
 							</div>
 							<h3 class="member-name">Kripa Rajan</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/z1XB4NQ.jpg') !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Biomedical Engineering, 2016</p>
 								</div>
 							</div>
 							<h3 class="member-name">Katherine Lau</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/lRgGhIW.jpg?1') no-repeat !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Materials Science and Engineering, 2016</p>
 								</div>
 							</div>
 							<h3 class="member-name">Nirali Patel</h3>
@@ -412,17 +422,17 @@
 									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
 								</div>
 							</div>
-							<h3 class="member-name">Shu Xu</h3>
+							<h3 class="member-name">Saad Khan</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
 					</div>
 
 					<div class="row">
 						<h2 class="group">Class of 2015 Representatives</h2>
-						<div class="card">
+						<div class="card" style="background: url('http://i.imgur.com/seOkSWa.png') !important; background-size: 100% 100% !important;">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Chemical Engineering, 2015</p>
 								</div>
 							</div>
 							<h3 class="member-name">Cassandra Kotsolakis</h3>
@@ -443,13 +453,13 @@
 									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
 								</div>
 							</div>
-							<h3 class="member-name">Antanas Mockus</h3>
+							<h3 class="member-name">Shu Xu</h3>
 							<h3 class="member-title">Representative</h3>
 						</div>
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>Chemical and Biochemical Engineering, 2015</p>
 								</div>
 							</div>
 							<h3 class="member-name">Jennifer Dang</h3>
