--- a/resources.html
+++ b/resources.html
@@ -17,24 +17,25 @@
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
 </head>
 <body>
-	<header class="main-header">
-		<a href="./index.html"><div class="nav-logo">
-			<img class="logo" src="http://i.imgur.com/P3DUo8e.png">
-			<img class="rulogo" src="http://i.imgur.com/hNzbZFm.png">
-			<h3 class="title">Engineering Governing Council</h3>
-		</div></a>
-		
-		<!-- NAVBAR -->
-		<div class="navbar">
-			<ul class="navlinks">
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About</a></li>
-				<li><a href="./members.html">Members</a></li>
-				<li><a href="./societies.html">Societies</a></li>
-				<li><a href="./resources.html">Resources</a></li>
-			</ul>
-		</div>
-	</header>
+	<nav role="navigation" class="shadow">
+        <div class="container">
+            <div class="nav-row">
+                <a href="http://egc.rutgers.edu" rel="home">
+                	<img class="logo" src="http://i.imgur.com/K2VdLXR.png">
+            	</a>
+
+               <!-- <button data-dropdown-target="#navigation" class="visible-xxs visible-xs"><span class="visuallyhidden">Navigation</span></button> -->
+
+                <div id="navigation">
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About</a>
+                    <a href="./members.html">Members</a>
+                    <a href="./societies.html">Societies</a>
+                    <a href="./resources.html">Resources</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 	<div class="hero">
 		<div class="resource-container">
