--- a/members.html
+++ b/members.html
@@ -44,98 +44,98 @@
 				<div class="grid">
 					<div class="row">
 						<h2 class="group">Exec Board</h2>
-						<div class="card" style="background: url('http://i.imgur.com/czTvCLD.jpg') no-repeat !important; background-size: 100% auto !important">
+						<div class="card" style="background: url('http://i.imgur.com/ziiBRKU.jpg') no-repeat !important; background-size: 100% auto !important">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Materials Science and Engineering, 2015.</p>
-								</div>
-							</div>
-							<h3 class="member-name">Peter Spatocco</h3>
-							<h3 class="member-title">President</h3>
-						</div>
-						<div class="card" style="background: url('http://i.imgur.com/TM3clLr.png') !important">
-							<div class="overlay">
-								<div class="text-content">
-									<p>Materials Science and Engineering, 2016</p>
-								</div>
-							</div>
-							<h3 class="member-name">Ankur Choksi</h3>
-							<h3 class="member-title">Interval Vice President</h3>
-						</div>
-						<div class="card" style="background: url('http://i.imgur.com/ziiBRKU.jpg') no-repeat !important; background-size: 100% 100% !important;">
-							<div class="overlay">
-								<div class="text-content">
-									<p>Mechanical and Aerospace Engineering & Economics, 2016</p>
+									<p>cmp277@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
 							<h3 class="member-name">Kaustubh Deshpande</h3>
+							<h3 class="member-title">President</h3>
+						</div>
+						<div class="card">
+							<div class="overlay">
+								<div class="text-content">
+									<p>jkk80@scarletmail.rutgers.edu</p>
+								</div>
+							</div>
+							<h3 class="member-name">Jacqueline King</h3>
+							<h3 class="member-title">Interval Vice President</h3>
+						</div>
+						<div class="card" style="background: url('http://i.imgur.com/aeq3Yr1.jpg?1') no-repeat !important; background-size: 100% 100% !important;">
+							<div class="overlay">
+								<div class="text-content">
+									<p>cmp277@scarletmail.rutgers.edu</p>
+								</div>
+							</div>
+							<h3 class="member-name">Christina Parry</h3>
 							<h3 class="member-title">External Vice President</h3>
 						</div>
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>cat159@Scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Jackie King</h3>
+							<h3 class="member-name">Christian Tabedzki</h3>
 							<h3 class="member-title">Treasurer</h3>
 						</div>
-						<div class="card" style="background: url('http://i.imgur.com/42oKcJT.png') !important">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical and Computer Engineering & Psychology, 2017</p>
+									<p>rj240@scartletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Riya Ram</h3>
+							<h3 class="member-name">Rashi Jha</h3>
 							<h3 class="member-title">Secretary</h3>
 						</div>
 					</div>
 
 					<div class="row">
 						<h2 class="group">Standing Committee Chairs</h2>
-						<div class="card" style="background: url('http://i.imgur.com/iiKbxZb.jpg?1') no-repeat !important; background-size: 100% 100% !important;">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Chemical Engineering, 2016</p>
+									<p>xy131@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Charles Foster, Chair</h3>
+							<h3 class="member-name">Xinyang Ying, Chair</h3>
 							<h3 class="member-title">University Affairs</h3>
 						</div>
-						<div class="card" style="background: url('http://i.imgur.com/hMgGonU.png') no-repeat !important; background-size: 100% 100% !important;">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical and Computer Engineering, 2017</p>
+									<p>dpp94@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Jasel Patel, Vice-Chair</h3>
+							<h3 class="member-name">Dhruvit Patel, Co-Chair</h3>
 							<h3 class="member-title">University Affairs</h3>
 						</div>
-						<div class="card" style="background: url('http://i.imgur.com/aeq3Yr1.jpg?1') no-repeat !important; background-size: 100% 100% !important;">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical and Computer Engineering, 2017</p>
+									<p>eal141@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Christina Parry, Co-Chair</h3>
-							<h3 class="member-title">Engineering Affairs</h3>
-						</div>
-						<div class="card" style="background: url('http://i.imgur.com/42oKcJT.png') !important">
-							<div class="overlay">
-								<div class="text-content">
-									<p>Electrical Engineering & Psychology, 2017</p>
-								</div>
-							</div>
-							<h3 class="member-name">Riya Ram, Co-Chair</h3>
+							<h3 class="member-name">Emily Lopez, Co-Chair</h3>
 							<h3 class="member-title">Engineering Affairs</h3>
 						</div>
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Chemical and Biochemical Engineering, 2015</p>
+									<p>mc1713@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Jennifer Dang, Chair</h3>
+							<h3 class="member-name">Mahtab Chowdhury, Co-Chair</h3>
+							<h3 class="member-title">Engineering Affairs</h3>
+						</div>
+						<div class="card">
+							<div class="overlay">
+								<div class="text-content">
+									<p>sandra.pelka@rutgers.edu</p>
+								</div>
+							</div>
+							<h3 class="member-name">Sandra Pelka, Chair</h3>
 							<h3 class="member-title">Society Affairs</h3>
 						</div>
 						<br>
@@ -150,28 +150,37 @@
 							<h3 class="member-name">Janki Patel, Co-Chair</h3>
 							<h3 class="member-title">Events</h3>-->
 						</div>
-						<div class="card" style="background: url('http://i.imgur.com/co3nREZ.png') !important">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Biomedical Engineering, 2017</p>
+									<p>pvp43@scarletmail.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Rashi Jha, Co-Chair</h3>
+							<h3 class="member-name">Pooja Patel, Co-Chair</h3>
 							<h3 class="member-title">Events</h3>
 						</div>
-						<div class="card" style="background: url('http://i.imgur.com/seOkSWa.png') !important; background-size: 100% 100% !important;">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Chemical Engineering, 2015</p>
+									<p>rct62@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name" style="font-size: 18px;">Cassandra Kotsolakis, Chair</h3>
-							<h3 class="member-title">Internal Review</h3>
+							<h3 class="member-name">Rosemary Tomao, Chair</h3>
+							<h3 class="member-title">First-Year Events</h3>
 						</div>
-						<div class="card" style="background-size: 100% 100% !important;">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Biomedical Engineering, 2016</p>
+									<p>jkk80@scarletmail.rutgers.edu</p>
+								</div>
+							</div>
+							<h3 class="member-name" style="font-size: 18px;">Jacqueline King, Chair</h3>
+							<h3 class="member-title">Internal Review</h3>
+						</div>
+						<div class="card">
+							<div class="overlay">
+								<div class="text-content">
+									<p>bkp30@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
 							<h3 class="member-name">Bharani Pusukur, Co-Chair</h3>
@@ -180,7 +189,7 @@
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical and Computer Engineering, 2017</p>
+									<p>vj92@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
 							<h3 class="member-name">Viral Jogani, Co-Chair</h3>
@@ -199,10 +208,10 @@
 							<h3 class="member-name">Akshay Sardana, Co-Chair</h3>
 							<h3 class="member-title">Fundraising</h3>
 						</div>
-						<div class="card" style="background: url('http://i.imgur.com/RqPEJml.png') !important; background-size: 100% 100% !important;" >
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Computer Engineering & Computer Science, 2018</p>
+									<p>bdm89@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
 							<h3 class="member-name">Brian Monticello, Co-Chair</h3>
@@ -214,13 +223,13 @@
 									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
 								</div>
 							</div>
-							<h3 class="member-name">Sharlina Keshava, Chair</h3>
+							<h3 class="member-name">Zhen Lin, Chair</h3>
 							<h3 class="member-title">Yearbook</h3>
 						</div>
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical and Computer Engineering, 2017</p>
+									<p>vj92@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
 							<h3 class="member-name">Viral Jogani, Chair</h3>
@@ -229,16 +238,16 @@
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Electrical and Computer Engineering & Psychology, 2017</p>
+									<p></p>
 								</div>
 							</div>
-							<h3 class="member-name">Jigar Bhalodia, Co-Chair</h3>
+							<h3 class="member-name">Ananth Rao, Co-Chair</h3>
 							<h3 class="member-title">Sustainability</h3>
 						</div>
 						<br>
 						<br>
 						<br>
-						<div class="card">
+						<!-- <div class="card">
 							<div class="overlay">
 								<div class="text-content">
 									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
@@ -246,36 +255,36 @@
 							</div>
 							<h3 class="member-name">Shane Patel, Co-Chair</h3>
 							<h3 class="member-title">Sustainability</h3>
-						</div>
+						</div> -->
 					</div>
 
 					<div class="row">
 						<h2 class="group">Senators</h2>
-						<div class="card" style="background: url('http://i.imgur.com/3bpd6q7.png') !important;">
+						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Chemical Engineering & Physics, 2015</p>
+									<p>amd395@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Vetri Velan</h3>
-							<h3 class="member-title">Senator</h3>
-						</div>
-						<div class="card" style="background: url('http://i.imgur.com/aeq3Yr1.jpg?1') no-repeat !important; background-size: 100% 100% !important;">
-							<div class="overlay">
-								<div class="text-content">
-									<p>Electrical and Computer Engineering, 2017</p>
-								</div>
-							</div>
-							<h3 class="member-name">Christina Parry</h3>
+							<h3 class="member-name">Avi Desai</h3>
 							<h3 class="member-title">Senator</h3>
 						</div>
 						<div class="card">
 							<div class="overlay">
 								<div class="text-content">
-									<p>Fusce iaculis nunc nec urna porttitor, a viverra ligula tincidunt. Morbi quis justo posuere, iaculis lectus sit amet, ultricies est. Nunc sodales magna quis tincidunt finibus.</p>
+									<p>amd395@scarletmail.rutgers.edu</p>
 								</div>
 							</div>
-							<h3 class="member-name">Bharath Krishnamurthi</h3>
+							<h3 class="member-name">Mohamed Asker</h3>
+							<h3 class="member-title">Senator</h3>
+						</div>
+						<div class="card">
+							<div class="overlay">
+								<div class="text-content">
+									<p>bkp30@scarletmail.rutgers.edu</p>
+								</div>
+							</div>
+							<h3 class="member-name">Bharani Pusukur</h3>
 							<h3 class="member-title">Senator</h3>
 						</div>
 					</div>
